# laparoscopy-camera

./: .gitignore  CMakeLists.txt  README.md  build-opencv.sh  init.sh  install-deps.sh  laparoscopy  laparoscopy.cpp
